--- a/jogodavelha/index.html
+++ b/jogodavelha/index.html
@@ -56,7 +56,7 @@ Aula de Javascript
         </div>
       </div>
     </div>
-    <script src="js/jscript.js"></script>
+    <script src="js/game.js"></script>
 </body>
 
 </html>
