--- a/detonaralph/index.html
+++ b/detonaralph/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <title>Bootcamp IFood - Detona Ralph Game</title>
   <meta charset="UTF-8">
@@ -21,7 +20,7 @@
       </div>
 
       <nav>
-        <div class="menu-time">00.00</div>
+        <div class="menu-time">00:00</div>
         <div class="menu-score">10</div>
         <div class="menu-lives">5</div>
       </nav>
@@ -29,31 +28,32 @@
 
     <main>
       <div id="centro">
-        <div id="dv1" onclick="checarPos(0)">
+        <div id="dv0" onclick="clickDetona(0)" style="background-image: url('assets/img/ralphativo.png');">
+          <img id="ralph" src="" alt="Detona Ralph" />
         </div>
 
-        <div id="dv2" onclick="checarPos(1)">
+        <div id="dv1" onclick="clickDetona(1)">
         </div>
 
-        <div id="dv3" onclick="checarPos(2)">
+        <div id="dv2" onclick="clickDetona(2)">
         </div>
 
-        <div id="dv4" onclick="checarPos(3)">
+        <div id="dv3" onclick="clickDetona(3)">
         </div>
 
-        <div id="dv5" onclick="checarPos(4)">
+        <div id="dv4" onclick="clickDetona(4)">
         </div>
 
-        <div id="dv6" onclick="checarPos(5)">
+        <div id="dv5" onclick="clickDetona(5)">
         </div>
 
-        <div id="dv7" onclick="checarPos(6)">
+        <div id="dv6" onclick="clickDetona(6)">
         </div>
 
-        <div id="dv8" onclick="checarPos(7)">
+        <div id="dv7" onclick="clickDetona(7)">
         </div>
 
-        <div id="dv9" onclick="checarPos(8)">
+        <div id="dv8" onclick="clickDetona(8)">
         </div>
       </div>
     </main>
@@ -61,7 +61,6 @@
     <footer>
     </footer>
   </div>
-  <!-- container -->
-  <script src="js/jscript.js"></script>
+  <script src="assets/js/jscript.js"></script>
   </body>
  </html>
