feat: function placar() created

--- a/detonaralph/index.html
+++ b/detonaralph/index.html
@@ -21,7 +21,7 @@
 
       <nav>
         <div class="menu-time">00:00</div>
-        <div class="menu-score">10</div>
+        <div id="menu-score">0</div>
         <div class="menu-lives">5</div>
       </nav>
     </header>
