feat: function changeDetona() created

--- a/detonaralph/index.html
+++ b/detonaralph/index.html
@@ -20,40 +20,39 @@
       </div>
 
       <nav>
-        <div class="menu-time">00:00</div>
+        <div id="menu-time">00:00</div>
         <div id="menu-score">0</div>
-        <div class="menu-lives">5</div>
+        <div id="menu-lives">3</div>
       </nav>
     </header>
 
     <main>
       <div id="centro">
-        <div id="dv0" onclick="clickDetona(0)" style="background-image: url('assets/img/ralphativo.png');">
-          <img id="ralph" src="" alt="Detona Ralph" />
+        <div id="dv0" onclick="clickDetona(0)">
         </div>
 
-        <div id="dv1" onclick="clickDetona(1)">
+        <div id="dv1" onclick="clickDetona(1)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
 
-        <div id="dv2" onclick="clickDetona(2)">
+        <div id="dv2" onclick="clickDetona(2)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
 
-        <div id="dv3" onclick="clickDetona(3)">
+        <div id="dv3" onclick="clickDetona(3)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
 
-        <div id="dv4" onclick="clickDetona(4)">
+        <div id="dv4" onclick="clickDetona(4)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
 
-        <div id="dv5" onclick="clickDetona(5)">
+        <div id="dv5" onclick="clickDetona(5)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
 
-        <div id="dv6" onclick="clickDetona(6)">
+        <div id="dv6" onclick="clickDetona(6)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
 
-        <div id="dv7" onclick="clickDetona(7)">
+        <div id="dv7" onclick="clickDetona(7)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
 
-        <div id="dv8" onclick="clickDetona(8)">
+        <div id="dv8" onclick="clickDetona(8)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
       </div>
     </main>
