feat: logo social medias

--- a/detonaralph/index.html
+++ b/detonaralph/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <title>Bootcamp IFood - Detona Ralph Game</title>
   <meta charset="UTF-8">
@@ -58,8 +59,31 @@
     </main>
 
     <footer>
+      <div class="socialmedia-logo">
+        <a href="https://www.instagram.com/profdomdev/" target="_blank">
+          <img src="assets/img/instagram80x80.png" alt="Logotipo do Instagram" />
+        </a>
+      </div>
+
+      <div class="socialmedia-logo">
+        <a href="https://www.youtube.com/channel/UC9cGKfFU0ZG-TvNLbfYUTEg" target="_blank">
+          <img src="assets/img/logoyoutube.jpg" alt="Logotipo do youtube" />
+        </a>
+      </div>
+
+      <div class="socialmedia-logo">
+        <a href="https://www.linkedin.com/in/douglas-ramos-dev" target="_blank">
+          <img src="assets/img/linkedin.png" alt="Logotipo do Linkedin" />
+        </a>
+      </div>
+      <div class="socialmedia-logo">
+        <a href="https://github.com/douginfodev" target="_blank">
+          <img src="assets/img/logogit.png" alt="Logo do repositorio GitHub" />
+        </a>
+      </div>
     </footer>
   </div>
   <script src="assets/js/jscript.js"></script>
-  </body>
- </html>
+</body>
+
+</html>
