Functions clickKey() and playsound() created

--- a/piano/index.html
+++ b/piano/index.html
@@ -31,25 +31,25 @@
 
     <main>
       <div id="centro">
-        <div id="keyc" onclick="clickDetona(0)">
+        <div id="keyc" onclick="clickKey('C')">
         </div>
 
-        <div id="keyd" onclick="clickDetona(1)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="keyd" onclick="clickKey('D')">
         </div>
 
-        <div id="keye" onclick="clickDetona(2)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="keye" onclick="clickKey('E')">
         </div>
 
-        <div id="keyf" onclick="clickDetona(3)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="keyf" onclick="clickKey('F')">
         </div>
 
-        <div id="keyg" onclick="clickDetona(4)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="keyg" onclick="clickKey('G')">
         </div>
 
-        <div id="keya" onclick="clickDetona(5)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="keya" onclick="clickKey('A')">
         </div>
 
-        <div id="keyb" onclick="clickDetona(6)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="keyb" onclick="clickKey('B')">
         </div>
       </div>
     </main>
