--- a/piano/index.html
+++ b/piano/index.html
@@ -32,7 +32,7 @@
     <main>
       <div id="centro">
         <div id="keyc" onclick="clickKey('C')">
-        </div>
+        </div>        
 
         <div id="keyd" onclick="clickKey('D')">
         </div>
@@ -51,6 +51,24 @@
 
         <div id="keyb" onclick="clickKey('B')">
         </div>
+        
+        <div class="maiorkey">
+          <div id="maiorkeyc" onclick="clickKey('MC')"> 
+          </div>
+
+          <div id="maiorkeyd" onclick="clickKey('MD')"> 
+          </div> 
+
+          <div id="maiorkeyf" onclick="clickKey('MF')"> 
+          </div>
+
+          <div id="maiorkeyg" onclick="clickKey('MG')"> 
+          </div> 
+
+          <div id="maiorkeya" onclick="clickKey('MA')"> 
+          </div>          
+        </div>    
+
       </div>
     </main>
 
