--- a/piano/index.html
+++ b/piano/index.html
@@ -21,10 +21,12 @@
       </div>
 
       <div class="volume">
+       <span>VOLUME</span>
         <input type="range" min="0" max="0.9" step="0.1" />
       </div>
 
       <div class="teclas">
+        <span>TECLAS</span>
         <!-- Rounded switch -->
         <label class="switch">
           <input type="checkbox">
@@ -74,32 +76,34 @@
         </div>
 
       </div>
+
+      <aside>
+        <div class="socialmedia-logo">
+          <a href="https://www.instagram.com/profdomdev/" target="_blank">
+            <img src="assets/img/instagram80x80.png" alt="Logotipo do Instagram" />
+          </a>
+        </div>
+  
+        <div class="socialmedia-logo">
+          <a href="https://www.youtube.com/channel/UC9cGKfFU0ZG-TvNLbfYUTEg" target="_blank">
+            <img src="assets/img/logoyoutube.jpg" alt="Logotipo do youtube" />
+          </a>
+        </div>
+  
+        <div class="socialmedia-logo">
+          <a href="https://www.linkedin.com/in/douglas-ramos-dev" target="_blank">
+            <img src="assets/img/linkedin.png" alt="Logotipo do Linkedin" />
+          </a>
+        </div>
+        <div class="socialmedia-logo">
+          <a href="https://github.com/douginfodev" target="_blank">
+            <img src="assets/img/logogit.png" alt="Logo do repositorio GitHub" />
+          </a>
+        </div>
+      </aside>
     </main>
 
-    <footer>
-      <div class="socialmedia-logo">
-        <a href="https://www.instagram.com/profdomdev/" target="_blank">
-          <img src="assets/img/instagram80x80.png" alt="Logotipo do Instagram" />
-        </a>
-      </div>
-
-      <div class="socialmedia-logo">
-        <a href="https://www.youtube.com/channel/UC9cGKfFU0ZG-TvNLbfYUTEg" target="_blank">
-          <img src="assets/img/logoyoutube.jpg" alt="Logotipo do youtube" />
-        </a>
-      </div>
-
-      <div class="socialmedia-logo">
-        <a href="https://www.linkedin.com/in/douglas-ramos-dev" target="_blank">
-          <img src="assets/img/linkedin.png" alt="Logotipo do Linkedin" />
-        </a>
-      </div>
-      <div class="socialmedia-logo">
-        <a href="https://github.com/douginfodev" target="_blank">
-          <img src="assets/img/logogit.png" alt="Logo do repositorio GitHub" />
-        </a>
-      </div>
-    </footer>
+   
   </div>
   <script src="assets/js/jscript.js"></script>
 </body>
