Initial estruture header

--- a/yudiooh/index.html
+++ b/yudiooh/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-br">
 
 <head>
-  <title>Bootcamp IFood - Detona Ralph Game</title>
+  <title>Bootcamp IFood - YU-GIO-OH</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="assets/css/estilo.css">
-  <meta name="Description" content="Bootcamp IFood DIO.me - Projeto Detona Ralph Game">
+  <meta name="Description" content="Bootcamp IFood DIO.me - Projeto YU-DIO-OH">
   <meta name="author" content="Douglas Ramos - github.com/douginfodev">
   <meta name="robots" content="index,follow">
 </head>
@@ -16,18 +16,20 @@
     <header>
       <div class="brand">
         <a href="#">
-          <img src="assets/img/detonaralphlogo.png" alt="Logo Detona Ralph" title="Detona Ralph Game" />
+          <img src="assets/img/" alt="Logo Detona Ralph" title="Detona Ralph Game" />
         </a>
       </div>
 
-      <nav>
-        <div id="menu-time">30</div>
-        <div id="menu-score">0</div>
-        <div id="menu-lives">3</div>
-      </nav>
+      <div class="title">
+        <h1>YO-GIO-OH</h1>
+      </div>
     </header>
 
     <main>
+      <aside>
+        <h5>Player 1</h5>   
+      </aside>
+
       <div id="centro">
         <div id="dv0" onclick="clickDetona(0)">
         </div>
@@ -56,6 +58,10 @@
         <div id="dv8" onclick="clickDetona(8)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
       </div>
+
+      <aside>
+        <h5>Player 2/h5>
+      </aside>
     </main>
 
     <footer>
