Initial main estruture

--- a/yudiooh/index.html
+++ b/yudiooh/index.html
@@ -30,37 +30,25 @@
         <h5>Player 1</h5>   
       </aside>
 
-      <div id="centro">
-        <div id="dv0" onclick="clickDetona(0)">
+      <div class="centro">
+        <div class="centro-cards">
+          <div id="dv0" onclick="clickDetona(0)">
+          </div>
+  
+          <div id="dv1" onclick="clickDetona(1)" style="background-image: url('assets/img/ralphinativo.png');">
+          </div>
+  
+          <div id="dv2" onclick="clickDetona(2)" style="background-image: url('assets/img/ralphinativo.png');">
+          </div>
         </div>
 
-        <div id="dv1" onclick="clickDetona(1)" style="background-image: url('assets/img/ralphinativo.png');">
-        </div>
+        <div class="centro-footer">
 
-        <div id="dv2" onclick="clickDetona(2)" style="background-image: url('assets/img/ralphinativo.png');">
-        </div>
-
-        <div id="dv3" onclick="clickDetona(3)" style="background-image: url('assets/img/ralphinativo.png');">
-        </div>
-
-        <div id="dv4" onclick="clickDetona(4)" style="background-image: url('assets/img/ralphinativo.png');">
-        </div>
-
-        <div id="dv5" onclick="clickDetona(5)" style="background-image: url('assets/img/ralphinativo.png');">
-        </div>
-
-        <div id="dv6" onclick="clickDetona(6)" style="background-image: url('assets/img/ralphinativo.png');">
-        </div>
-
-        <div id="dv7" onclick="clickDetona(7)" style="background-image: url('assets/img/ralphinativo.png');">
-        </div>
-
-        <div id="dv8" onclick="clickDetona(8)" style="background-image: url('assets/img/ralphinativo.png');">
         </div>
       </div>
-
+      
       <aside>
-        <h5>Player 2/h5>
+        <h5>Player 2</h5>
       </aside>
     </main>
 
