Game board estruture

--- a/yudiooh/index.html
+++ b/yudiooh/index.html
@@ -27,28 +27,69 @@
 
     <main>
       <aside>
-        <h5>Player 1</h5>   
+        <h5>Player 1</h5>  
+        <div id="p1card1">
+          <img src="" alt="">
+        </div> 
+
+        <div id="p1card2">
+          <img src="" alt="">
+        </div>
+
+        <div id="p1card3">
+          <img src="" alt="">
+        </div>
+
+        <div id="p1card4">
+          <img src="" alt="">
+        </div>
+
+        <div id="p1card5">
+          <img src="" alt="">
+        </div>
       </aside>
 
       <div class="centro">
         <div class="centro-cards">
-          <div id="dv0" onclick="clickDetona(0)">
+          <div class="board">
+          <div id="board-card1" onclick="clickDetona(0)">
           </div>
   
-          <div id="dv1" onclick="clickDetona(1)" style="background-image: url('assets/img/ralphinativo.png');">
+          <div class="logo-center">
+            <img src="assets/icons/millenium2.png" alt="">
           </div>
   
-          <div id="dv2" onclick="clickDetona(2)" style="background-image: url('assets/img/ralphinativo.png');">
+          <div id="board-card2" onclick="clickDetona(2)" style="background-image: url('assets/img/ralphinativo.png');">
           </div>
+        </div>
         </div>
 
         <div class="centro-footer">
-
+          
         </div>
       </div>
-      
+
       <aside>
         <h5>Player 2</h5>
+        <div id="p2card1">
+          <img src="" alt="">
+        </div> 
+
+        <div id="p2card2">
+          <img src="" alt="">
+        </div>
+
+        <div id="p2card3">
+          <img src="" alt="">
+        </div>
+
+        <div id="p2card4">
+          <img src="" alt="">
+        </div>
+
+        <div id="p2card5">
+          <img src="" alt="">
+        </div>
       </aside>
     </main>
 
