--- a/yudiooh/index.html
+++ b/yudiooh/index.html
@@ -16,12 +16,12 @@
     <header>
       <div class="brand">
         <a href="#">
-          <img src="assets/img/" alt="Logo Detona Ralph" title="Detona Ralph Game" />
+          <img src="assets/img/logoyu.png" alt="Logo YU-GI-OH" title="YU-GI-OH Game" />
         </a>
       </div>
 
       <div class="title">
-        <h1>YO-GIO-OH</h1>
+        <h1>YU-GI-OH</h1>
       </div>
     </header>
 
@@ -63,40 +63,52 @@
               style="background-image: url('assets/img/ralphinativo.png');">
             </div>
           </div>
-        </div> 
-          <div class="centro-footer">
-            <div class="card-info">
+        </div>
+        <div class="centro-footer">
+          <div class="card-info">
+            <div class="card-info-descricao">
 
             </div>
 
-            <div class="card-info">
+            <div class="card-info-placar">
+
+            </div>
+          </div>
+
+          <div class="card-info1">
+            <div class="card-info-descricao">
+
+            </div>
+
+            <div class="card-info-placar">
 
             </div>
           </div>
         </div>
+      </div>
 
-        <aside class="player2">
-          <h5>Player 2</h5>
-          <div id="p2card1">
-            <img src="" alt="">
-          </div>
+      <aside class="player2">
+        <h5>Player 2</h5>
+        <div id="p2card1">
+          <img src="" alt="">
+        </div>
 
-          <div id="p2card2">
-            <img src="" alt="">
-          </div>
+        <div id="p2card2">
+          <img src="" alt="">
+        </div>
 
-          <div id="p2card3">
-            <img src="" alt="">
-          </div>
+        <div id="p2card3">
+          <img src="" alt="">
+        </div>
 
-          <div id="p2card4">
-            <img src="" alt="">
-          </div>
+        <div id="p2card4">
+          <img src="" alt="">
+        </div>
 
-          <div id="p2card5">
-            <img src="" alt="">
-          </div>
-        </aside>
+        <div id="p2card5">
+          <img src="" alt="">
+        </div>
+      </aside>
     </main>
 
     <footer>
