--- a/yudiooh/index.html
+++ b/yudiooh/index.html
@@ -28,23 +28,23 @@
     <main>
       <aside class="player1">
         <h5>Player 1</h5>
-        <div id="p1card1">
+        <div id="p1card1" onmouseenter="selectCard(1,'p1')">
           <img src="" alt="">
         </div>
 
-        <div id="p1card2">
+        <div id="p1card2" onmouseenter="selectCard(2,'p1')">
           <img src="" alt="">
         </div>
 
-        <div id="p1card3">
+        <div id="p1card3" onmouseenter="selectCard(3,'p1')">
           <img src="" alt="">
         </div>
 
-        <div id="p1card4">
+        <div id="p1card4" onmouseenter="selectCard(2,'p1')">
           <img src="" alt="">
         </div>
 
-        <div id="p1card5">
+        <div id="p1card5" onmouseenter="selectCard(1,'p1')">
           <img src="" alt="">
         </div>
       </aside>
@@ -68,16 +68,16 @@
           <div class="card-info">
             <div class="card-info-descricao">
               <div class="card-info-descricao-title">
-                <h3 id="namecard">DARK MAGICIAN</h3>
+                <h3 id="namecardp1"></h3>
               </div> 
 
               <div class="card-info-descricao-card">
-                <img id="card" src="assets/icons/dragon.png" alt=""/>
+                <img id="cardp1" src="assets/icons/dragon.png" alt=""/>
               </div>
 
               <div class="card-info-descricao-option">
                 <h3>ATRIBUTOS</h3>
-                <h4 id="atributos">PAPEL</h4>
+                <h4 id="atributosp1"></h4>
               </div>
             </div>
 
@@ -96,11 +96,11 @@
           <div class="card-info1">
             <div class="card-info-descricao">
               <div class="card-info-descricao-title">
-                <h3 id="namecardp2">EXODIA</h3>
+                <h3 id="namecardp2"></h3>
               </div> 
 
               <div class="card-info-descricao-card">
-                <img id="card" src="assets/icons/exodia.png" alt=""/>
+                <img id="cardp2" src="assets/icons/exodia.png" alt=""/>
               </div>
 
               <div class="card-info-descricao-option">
@@ -125,23 +125,23 @@
 
       <aside class="player2">
         <h5>Player 2</h5>
-        <div id="p2card1">
+        <div id="p2card1" onmouseenter="selectCard('3')">
           <img src="" alt="">
         </div>
 
-        <div id="p2card2">
+        <div id="p2card2" onmouseenter="selectCard('2')">
           <img src="" alt="">
         </div>
 
-        <div id="p2card3">
+        <div id="p2card3" onmouseenter="selectCard('1')">
           <img src="" alt="">
         </div>
 
-        <div id="p2card4">
+        <div id="p2card4" onmouseenter="selectCard(2,'p2')">
           <img src="" alt="">
         </div>
 
-        <div id="p2card5">
+        <div id="p2card5" onmouseenter="selectCard(3,'p2')">
           <img src="" alt="">
         </div>
       </aside>
