function choicecards created

--- a/yudiooh/index.html
+++ b/yudiooh/index.html
@@ -52,32 +52,32 @@
       <div class="centro">
         <div class="centro-cards">
           <div class="board">
-            <div id="board-card1" onclick="clickDetona(0)" style="background-image: url('assets/icons/cardhighgreen.png');">
+            <div id="board-card1" style="background-image: url('assets/icons/cardhighgray.png');">
             </div>
 
             <div class="logo-center">
               <img src="assets/icons/millenium2.png" alt="">
             </div>
 
-            <div id="board-card2" onclick="clickDetona(2)"
-              style="background-image: url('assets/icons/cardhighblue.png');">
+            <div id="board-card2"
+              style="background-image: url('assets/icons/cardhighgray.png');">
             </div>
           </div>
         </div>
         <div class="centro-footer">
-          <div class="card-info">
+          <div class="card-info" >
             <div class="card-info-descricao">
               <div class="card-info-descricao-title">
-                <h3 id="namecardp1"></h3>
+                <h3 id="namecardp1">Dragon</h3>
               </div> 
 
-              <div class="card-info-descricao-card">
+              <div class="card-info-descricao-card" onclick="choiceCard('p1')">
                 <img id="cardp1" src="assets/icons/dragon.png" alt=""/>
               </div>
 
               <div class="card-info-descricao-option">
                 <h3>ATRIBUTOS</h3>
-                <h4 id="atributosp1"></h4>
+                <h4 id="atributosp1">PEDRA</h4>
               </div>
             </div>
 
@@ -96,10 +96,10 @@
           <div class="card-info1">
             <div class="card-info-descricao">
               <div class="card-info-descricao-title">
-                <h3 id="namecardp2"></h3>
+                <h3 id="namecardp2">Exodia</h3>
               </div> 
 
-              <div class="card-info-descricao-card">
+              <div class="card-info-descricao-card" onclick="choiceCard('p2')">
                 <img id="cardp2" src="assets/icons/exodia.png" alt=""/>
               </div>
 
