Created message win and lose

--- a/yudiooh/index.html
+++ b/yudiooh/index.html
@@ -50,8 +50,12 @@
       </aside>
 
       <div class="centro">
+        <div class="timer"><h1>3</h1></div>
         <div class="centro-cards">
           <div class="board">
+            <div id="board-card1-win">
+              <h2 id="card1win"></h2>
+            </div>
             <div id="board-card1" style="background-image: url('assets/icons/cardhighgray.png');">
             </div>
 
@@ -61,6 +65,9 @@
 
             <div id="board-card2"
               style="background-image: url('assets/icons/cardhighgray.png');">
+            </div>
+            <div id="board-card2-win">
+              <h2 id="card2win"></h2>
             </div>
           </div>
         </div>
