Created function countTime

--- a/yudiooh/index.html
+++ b/yudiooh/index.html
@@ -50,7 +50,7 @@
       </aside>
 
       <div class="centro">
-        <div class="timer"><h1>3</h1></div>
+        <div class="timer"><h1 id="time">Selecionar Cartas</h1></div>
         <div class="centro-cards">
           <div class="board">
             <div id="board-card1-win">
