--- a/yudiooh/index.html
+++ b/yudiooh/index.html
@@ -50,7 +50,9 @@
       </aside>
 
       <div class="centro">
-        <div class="timer"><h1 id="time">Selecionar Cartas</h1></div>
+        <div class="timer">
+          <h1 id="time">Selecionar Cartas</h1>
+        </div>
         <div class="centro-cards">
           <div class="board">
             <div id="board-card1-win">
@@ -63,8 +65,7 @@
               <img src="assets/icons/millenium2.png" alt="">
             </div>
 
-            <div id="board-card2"
-              style="background-image: url('assets/icons/cardhighgray.png');">
+            <div id="board-card2" style="background-image: url('assets/icons/cardhighgray.png');">
             </div>
             <div id="board-card2-win">
               <h2 id="card2win"></h2>
@@ -72,14 +73,14 @@
           </div>
         </div>
         <div class="centro-footer">
-          <div class="card-info" >
+          <div class="card-info">
             <div class="card-info-descricao">
               <div class="card-info-descricao-title">
                 <h3 id="namecardp1">Dragon</h3>
-              </div> 
+              </div>
 
               <div class="card-info-descricao-card" onclick="choiceCard('p1')">
-                <img id="cardp1" src="assets/icons/dragon.png" alt=""/>
+                <img id="cardp1" src="assets/icons/dragon.png" alt="" />
               </div>
 
               <div class="card-info-descricao-option">
@@ -104,10 +105,10 @@
             <div class="card-info-descricao">
               <div class="card-info-descricao-title">
                 <h3 id="namecardp2">Exodia</h3>
-              </div> 
+              </div>
 
               <div class="card-info-descricao-card" onclick="choiceCard('p2')">
-                <img id="cardp2" src="assets/icons/exodia.png" alt=""/>
+                <img id="cardp2" src="assets/icons/exodia.png" alt="" />
               </div>
 
               <div class="card-info-descricao-option">
@@ -154,30 +155,34 @@
       </aside>
     </main>
 
-    <footer>     
-      <div class="socialmedia-logo">
-        <a href="https://www.instagram.com/profdomdev/" target="_blank">
-          <img src="assets/img/instagram80x80.png" alt="Logotipo do Instagram" />
-        </a>
+    <footer>
+      <div class="agradecimento">
+       <span>Gostaria de agradecer a <b>Potencia Tech IFood</b> e a <b>Dio.me</b> pela oportunidade de participar do <b>Bootcamp de Desenvolvimento de Jogos</b>.</span>
       </div>
+      <div class="socialmedia">
+        <div class="socialmedia-logo">
+          <a href="https://www.instagram.com/profdomdev/" target="_blank">
+            <img src="assets/img/instagram80x80.png" alt="Logotipo do Instagram" />
+          </a>
+        </div>
 
-      <div class="socialmedia-logo">
-        <a href="https://www.youtube.com/channel/UC9cGKfFU0ZG-TvNLbfYUTEg" target="_blank">
-          <img src="assets/img/logoyoutube.jpg" alt="Logotipo do youtube" />
-        </a>
-      </div>
+        <div class="socialmedia-logo">
+          <a href="https://www.youtube.com/channel/UC9cGKfFU0ZG-TvNLbfYUTEg" target="_blank">
+            <img src="assets/img/logoyoutube.jpg" alt="Logotipo do youtube" />
+          </a>
+        </div>
 
-      <div class="socialmedia-logo">
-        <a href="https://www.linkedin.com/in/douglas-ramos-dev" target="_blank">
-          <img src="assets/img/linkedin.png" alt="Logotipo do Linkedin" />
-        </a>
+        <div class="socialmedia-logo">
+          <a href="https://www.linkedin.com/in/douglas-ramos-dev" target="_blank">
+            <img src="assets/img/linkedin.png" alt="Logotipo do Linkedin" />
+          </a>
+        </div>
+        <div class="socialmedia-logo">
+          <a href="https://github.com/douginfodev" target="_blank">
+            <img src="assets/img/logogit.png" alt="Logo do repositorio GitHub" />
+          </a>
+        </div>
       </div>
-      <div class="socialmedia-logo">
-        <a href="https://github.com/douginfodev" target="_blank">
-          <img src="assets/img/logogit.png" alt="Logo do repositorio GitHub" />
-        </a>
-      </div>
-      
     </footer>
   </div>
   <script src="assets/js/jscript.js"></script>
