--- a/jogodavelha/index.html
+++ b/jogodavelha/index.html
@@ -20,31 +20,31 @@ Aula de Javascript
             <div id="latesq">
             </div>
             <div id="centro">
-                <div id="dv1" onclick="checarPos(0)">
+                <div id="casa0" onclick="verificaCasaVazia(0,0,0)">
                 </div>
 
-                <div id="dv2" onclick="checarPos(1)">
+                <div id="casa1" onclick="verificaCasaVazia(1,0,1)">
                 </div>
 
-                <div id="dv3" onclick="checarPos(2)">
+                <div id="casa2" onclick="verificaCasaVazia(2,0,2)">
                 </div>
 
-                <div id="dv4" onclick="checarPos(3)">
+                <div id="casa3" onclick="verificaCasaVazia(3,1,0)">
                 </div>
 
-                <div id="dv5" onclick="checarPos(4)">
+                <div id="casa4" onclick="verificaCasaVazia(4,1,1)">
                 </div>
 
-                <div id="dv6" onclick="checarPos(5)">
+                <div id="casa5" onclick="verificaCasaVazia(5,1,2)">
                 </div>
 
-                <div id="dv7" onclick="checarPos(6)">
+                <div id="casa6" onclick="verificaCasaVazia(6,2,0)">
                 </div>
 
-                <div id="dv8" onclick="checarPos(7)">
+                <div id="casa7" onclick="verificaCasaVazia(7,2,1)">
                 </div>
 
-                <div id="dv9" onclick="checarPos(8)">
+                <div id="casa8" onclick="verificaCasaVazia(8,2,2)">
                 </div>
             </div>
 
