created layout game

--- a/memoryemoji/index.html
+++ b/memoryemoji/index.html
@@ -16,12 +16,12 @@
     <header>
       <div class="brand">
         <a href="#">
-          <img src="assets/img/detonaralphlogo.png" alt="Logo Detona Ralph" title="Detona Ralph Game" />
+          <img src="assets/img/logoyu.png" alt="Logo Memory Emojy" title="Memory Emoji Game" />
         </a>
       </div>
 
       <div class="title-game">
-        <h2>Memory Game</h2>
+        <span>MEMORY GAME</span>
       </div>
     </header>
 
@@ -30,57 +30,57 @@
         <div id="dv0" onclick="clickDetona(0)">
         </div>
 
-        <div id="dv1" onclick="clickDetona(1)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv1" onclick="clickDetona(1)">
         </div>
 
-        <div id="dv2" onclick="clickDetona(2)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv2" onclick="clickDetona(2)">
         </div>
 
-        <div id="dv3" onclick="clickDetona(3)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv3" onclick="clickDetona(3)">
         </div>
 
-        <div id="dv4" onclick="clickDetona(4)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv4" onclick="clickDetona(4)">
         </div>
 
-        <div id="dv5" onclick="clickDetona(5)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv5" onclick="clickDetona(5)">
         </div>
 
-        <div id="dv6" onclick="clickDetona(6)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv6" onclick="clickDetona(6)">
         </div>
 
-        <div id="dv7" onclick="clickDetona(7)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv7" onclick="clickDetona(7)">
         </div>
 
-        <div id="dv8" onclick="clickDetona(8)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv8" onclick="clickDetona(8)">
         </div>
 
-        <div id="dv9" onclick="clickDetona(6)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv9" onclick="clickDetona(9)">
         </div>
 
-        <div id="dv10" onclick="clickDetona(7)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv10" onclick="clickDetona(10)">
         </div>
 
-        <div id="dv11" onclick="clickDetona(8)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv11" onclick="clickDetona(11)">
         </div>
 
-        <div id="dv12" onclick="clickDetona(6)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv12" onclick="clickDetona(12)">
         </div>
 
-        <div id="dv13" onclick="clickDetona(7)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv13" onclick="clickDetona(13)">
         </div>
 
-        <div id="dv14" onclick="clickDetona(8)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv14" onclick="clickDetona(14)">
         </div>
 
-        <div id="dv15" onclick="clickDetona(7)" style="background-image: url('assets/img/ralphinativo.png');">
-        </div>
-
-        <div id="dv16" onclick="clickDetona(8)" style="background-image: url('assets/img/ralphinativo.png');">
+        <div id="dv15" onclick="clickDetona(15)">
         </div>
       </div>
     </main>
 
     <footer>
+      <div class="button-game">
+        <button>RESET</button>
+      </div>
       <div class="socialmedia-logo">
         <a href="https://www.instagram.com/profdomdev/" target="_blank">
           <img src="assets/img/instagram80x80.png" alt="Logotipo do Instagram" />
