--- a/memoryemoji/index.html
+++ b/memoryemoji/index.html
@@ -27,59 +27,59 @@
 
     <main>
       <div id="centro">
-        <div id="dv0" onclick="clickDetona(0)">
+        <div id="dv0" onclick="clickCard(0)">
         </div>
 
-        <div id="dv1" onclick="clickDetona(1)">
+        <div id="dv1" onclick="clickCard(1)">
         </div>
 
-        <div id="dv2" onclick="clickDetona(2)">
+        <div id="dv2" onclick="clickCard(2)">
         </div>
 
-        <div id="dv3" onclick="clickDetona(3)">
+        <div id="dv3" onclick="clickCard(3)">
         </div>
 
-        <div id="dv4" onclick="clickDetona(4)">
+        <div id="dv4" onclick="clickCard(4)">
         </div>
 
-        <div id="dv5" onclick="clickDetona(5)">
+        <div id="dv5" onclick="clickCard(5)">
         </div>
 
-        <div id="dv6" onclick="clickDetona(6)">
+        <div id="dv6" onclick="clickCard(6)">
         </div>
 
-        <div id="dv7" onclick="clickDetona(7)">
+        <div id="dv7" onclick="clickCard(7)">
         </div>
 
-        <div id="dv8" onclick="clickDetona(8)">
+        <div id="dv8" onclick="clickCard(8)">
         </div>
 
-        <div id="dv9" onclick="clickDetona(9)">
+        <div id="dv9" onclick="clickCard(9)">
         </div>
 
-        <div id="dv10" onclick="clickDetona(10)">
+        <div id="dv10" onclick="clickCard(10)">
         </div>
 
-        <div id="dv11" onclick="clickDetona(11)">
+        <div id="dv11" onclick="clickCard(11)">
         </div>
 
-        <div id="dv12" onclick="clickDetona(12)">
+        <div id="dv12" onclick="clickCard(12)">
         </div>
 
-        <div id="dv13" onclick="clickDetona(13)">
+        <div id="dv13" onclick="clickCard(13)">
         </div>
 
-        <div id="dv14" onclick="clickDetona(14)">
+        <div id="dv14" onclick="clickCard(14)">
         </div>
 
-        <div id="dv15" onclick="clickDetona(15)">
+        <div id="dv15" onclick="clickCard(15)">
         </div>
       </div>
     </main>
 
     <footer>
       <div class="button-game">
-        <button>RESET</button>
+        <button onclick="reset()">RESET</button>
       </div>
       <div class="socialmedia-logo">
         <a href="https://www.instagram.com/profdomdev/" target="_blank">
